# bitrix

./: .env.example  .gitignore  CLAUDE.md  cities.json  destinos.json  docker-compose.yml  index.html  main.py  pyproject.toml  rol-chatbot.md  verify_scrape.py
core/: settings.py
integration/bitrix/: auth.py  bot.py  chat.py  client.py  conversations.py  events.py  router.py  schemas.py
integration/mcp/: server.py
integration/scrape/: clean.py  extract.py  render.py  schemas.py  store.py
integration/travel/: compositor.py  hoteles.py  paquetes.py  places.py  travelc.py  vuelos.py
